hv cluster test using jupyter notebook

--- a/test_code/hv/hv_cluster/hv_cluster_test.ipynb
+++ b/test_code/hv/hv_cluster/hv_cluster_test.ipynb
@@ -14,7 +14,7 @@
     "# author: LijiongChen\n",
     "# contact: s15010125@s.upc.edu.cn\n",
     "# time:19/06/2021\n",
-    "# update:06/11/2021\n",
+    "# update:26/11/2021\n",
     "# file: hv_cluster.ipynb\n",
     "#       This code is designead to sort the HVSR using keans and plot the result with plotly."
    ]
@@ -157,7 +157,7 @@
     "print('The max frequency is ' + str(max_freq) + 'Hz')\n",
     "print('The cluster number is ' + str(n_clusters))\n",
     "end_time_01 = time.time()\n",
-    "print('Time cost',end_time_01-start_time_01,'s')\n",
+    "print('Stage time cost',end_time_01-start_time_01,'s')\n",
     "print('------------------------Done!------------------------')"
    ],
    "metadata": {
@@ -295,7 +295,7 @@
     "htmlFileName = Folderpath.split(\"/\")[-1] + '_HV_Cluster' + '.html'\n",
     "plotly.offline.plot(fig, filename=Folderpath + '/' + htmlFileName)\n",
     "end_time_02 = time.time()\n",
-    "print('Time cost',end_time_02-start_time_02,'s')\n",
+    "print('Stage time cost',end_time_02-start_time_02,'s')\n",
     "print('------------------------Done!------------------------')\n"
    ],
    "metadata": {
