--- a/test_code/hv/hv_cluster/hv_cluster_test.ipynb
+++ b/test_code/hv/hv_cluster/hv_cluster_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import os\n",
@@ -48,12 +48,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Please select the folder path: \n",
+      "\n",
+      "--------------------------Ifo------------------------\n",
       "Folderpath: D:/ProjectMaterials/Chengdu_Line13/Part_07/DataProcess/20211124/HV\n",
       "FolderType: This folder has a total of [.hv] file 38 \n",
       "FolderType: This folder has a total of [.html] file 1 \n"
@@ -63,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 1/38 [00:00<00:04,  8.31it/s]"
+      "  3%|▎         | 1/38 [00:00<00:04,  8.27it/s]"
      ]
     },
     {
@@ -77,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 38/38 [00:04<00:00,  9.09it/s]\n"
+      "100%|██████████| 38/38 [00:04<00:00,  7.85it/s]\n"
      ]
     },
     {
@@ -86,17 +89,19 @@
      "text": [
       "The min frequency is 5.0Hz\n",
       "The max frequency is 20.0Hz\n",
-      "The cluster number is 8\n",
-      "Time cost 12.563533306121826 s\n",
+      "The cluster number is 6\n",
+      "Stage time cost 8.02653980255127 s\n",
       "------------------------Done!------------------------\n"
      ]
     }
    ],
    "source": [
     "# Load HV\n",
+    "print('Please select the folder path: \\n')\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
     "Folderpath = filedialog.askdirectory()\n",
+    "print('--------------------------Ifo------------------------')\n",
     "print('Folderpath:', Folderpath)\n",
     "root.destroy()\n",
     "# find the .hv data\n",
@@ -169,36 +174,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Group 1 \n",
-      "1_1.D.4\n",
-      "1_1.D.5\n",
-      "1_1.D.6\n",
+      "2_7.B.2\n",
+      "2_7.E.3\n",
+      "2_8.B.1\n",
+      "2_8.B.2\n",
       "Group 2 \n",
-      "2_1.D.3\n",
-      "2_1.D.5\n",
-      "2_2.D.3\n",
-      "2_2.D.5\n",
-      "2_3.D.3\n",
-      "2_4.D.3\n",
-      "Group 3 \n",
       "2_1.D.4\n",
       "2_1.D.6\n",
       "2_3.D.2\n",
       "2_3.D.4\n",
       "2_5.D.2\n",
-      "Group 4 \n",
-      "2_3.D.1\n",
-      "2_4.D.1\n",
-      "2_5.D.1\n",
       "2_5.E.2\n",
-      "2_6.D.1\n",
       "2_7.E.2\n",
+      "Group 3 \n",
+      "1_1.D.1\n",
+      "1_1.D.2\n",
+      "1_1.D.4\n",
+      "1_1.D.5\n",
+      "1_1.D.6\n",
+      "Group 4 \n",
+      "2_1.D.3\n",
+      "2_1.D.5\n",
+      "2_2.D.3\n",
+      "2_2.D.5\n",
+      "2_3.D.1\n",
+      "2_3.D.3\n",
+      "2_4.D.1\n",
+      "2_4.D.3\n",
+      "2_5.D.1\n",
+      "2_5.E.1\n",
+      "2_6.D.1\n",
+      "2_6.E.1\n",
+      "2_7.E.1\n",
+      "2_8.E.1\n",
       "Group 5 \n",
       "2_2.B.5\n",
       "2_2.B.6\n",
@@ -208,20 +223,8 @@
       "2_6.B.4\n",
       "2_8.B.3\n",
       "Group 6 \n",
-      "2_5.E.1\n",
-      "2_6.E.1\n",
-      "2_7.E.1\n",
-      "2_8.E.1\n",
-      "Group 7 \n",
-      "2_7.B.2\n",
-      "2_7.E.3\n",
-      "2_8.B.1\n",
-      "2_8.B.2\n",
-      "Group 8 \n",
-      "1_1.D.1\n",
-      "1_1.D.2\n",
       "1_1.D.3\n",
-      "Time cost 0.4472620487213135 s\n",
+      "Stage time cost 1.371309757232666 s\n",
       "------------------------Done!------------------------\n"
      ]
     }
