hv cluster code using jupyter notebook

--- a/test_code/hv/hv_cluster/hv_cluster_test.ipynb
+++ b/test_code/hv/hv_cluster/hv_cluster_test.ipynb
@@ -299,7 +299,7 @@
     "plotly.offline.plot(fig, filename=Folderpath + '/' + htmlFileName)\n",
     "end_time_02 = time.time()\n",
     "print('Stage time cost',end_time_02-start_time_02,'s')\n",
-    "print('------------------------Done!------------------------')\n"
+    "print('------------------------Done!------------------------')"
    ],
    "metadata": {
     "collapsed": false,
