update some tips

--- a/application_code/hv/hv_cluster/hv_cluster.ipynb
+++ b/application_code/hv/hv_cluster/hv_cluster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import os\n",
@@ -48,22 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folderpath: D:/ProjectMaterials/Chengdu_Line13/Part_07/DataProcess/20211124/HV\n",
-      "FolderType: This folder has a total of [.hv] file 38 \n",
-      "FolderType: This folder has a total of [.html] file 1 \n"
+      "Start of the program :)\n",
+      "Folderpath: D:/ProjectMaterials/Chengdu_Line13/Part_01/DataProcess/20211125/B/HV\n",
+      "FolderType: This folder has a total of [.hv] file 72 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 1/38 [00:00<00:04,  8.31it/s]"
+      "  1%|▏         | 1/72 [00:00<00:08,  8.64it/s]"
      ]
     },
     {
@@ -77,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 38/38 [00:04<00:00,  9.09it/s]\n"
+      "100%|██████████| 72/72 [00:08<00:00,  8.35it/s]\n"
      ]
     },
     {
@@ -86,13 +86,14 @@
      "text": [
       "The min frequency is 5.0Hz\n",
       "The max frequency is 20.0Hz\n",
-      "The cluster number is 8\n",
-      "Time cost 12.563533306121826 s\n",
+      "The cluster number is 6\n",
+      "Time cost 11.208673238754272 s\n",
       "------------------------Done!------------------------\n"
      ]
     }
    ],
    "source": [
+    "print('Start of the program :)')\n",
     "# Load HV\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
@@ -169,59 +170,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Group 1 \n",
-      "1_1.D.4\n",
-      "1_1.D.5\n",
-      "1_1.D.6\n",
+      "B0-125.B.3\n",
+      "B0-125.E.2\n",
+      "B0-127.5.E.1\n",
+      "B0-127.5.E.2\n",
+      "B2.5-125.B.3\n",
+      "B2.5-125.E.2\n",
+      "B2.5-127.5.E.1\n",
+      "B2.5-127.5.E.2\n",
       "Group 2 \n",
-      "2_1.D.3\n",
-      "2_1.D.5\n",
-      "2_2.D.3\n",
-      "2_2.D.5\n",
-      "2_3.D.3\n",
-      "2_4.D.3\n",
+      "B0-135.E.2\n",
+      "B0-137.5.E.2\n",
+      "B2.5-135.E.2\n",
+      "B2.5-137.5.E.2\n",
       "Group 3 \n",
-      "2_1.D.4\n",
-      "2_1.D.6\n",
-      "2_3.D.2\n",
-      "2_3.D.4\n",
-      "2_5.D.2\n",
+      "B0-130.B.3\n",
+      "B0-130.E.2\n",
+      "B0-132.5.E.1\n",
+      "B0-132.5.E.2\n",
+      "B2.5-130.B.2\n",
+      "B2.5-130.B.3\n",
+      "B2.5-130.D.5\n",
+      "B2.5-130.E.2\n",
+      "B2.5-132.5.D.1\n",
+      "B2.5-132.5.D.5\n",
+      "B2.5-132.5.E.1\n",
+      "B2.5-132.5.E.2\n",
+      "B5-130.B.1\n",
+      "B5-130.B.2\n",
+      "B5-130.B.5\n",
+      "B5-130.D.5\n",
+      "B5-132.5.B.5\n",
+      "B5-132.5.D.1\n",
+      "B5-132.5.D.5\n",
+      "B5-132.5.E.3\n",
       "Group 4 \n",
-      "2_3.D.1\n",
-      "2_4.D.1\n",
-      "2_5.D.1\n",
-      "2_5.E.2\n",
-      "2_6.D.1\n",
-      "2_7.E.2\n",
+      "B2.5-125.B.2\n",
+      "B2.5-125.D.5\n",
+      "B2.5-127.5.D.1\n",
+      "B2.5-127.5.D.5\n",
+      "B5-125.B.1\n",
+      "B5-125.B.2\n",
+      "B5-125.B.5\n",
+      "B5-125.D.5\n",
+      "B5-127.5.B.5\n",
+      "B5-127.5.D.1\n",
+      "B5-127.5.D.5\n",
+      "B5-127.5.E.3\n",
       "Group 5 \n",
-      "2_2.B.5\n",
-      "2_2.B.6\n",
-      "2_4.B.4\n",
-      "2_4.B.5\n",
-      "2_6.B.3\n",
-      "2_6.B.4\n",
-      "2_8.B.3\n",
+      "B0-135.B.3\n",
+      "B0-137.5.E.1\n",
+      "B2.5-135.B.2\n",
+      "B2.5-135.B.3\n",
+      "B2.5-135.D.5\n",
+      "B2.5-137.5.D.1\n",
+      "B2.5-137.5.D.5\n",
+      "B2.5-137.5.E.1\n",
+      "B5-135.B.1\n",
+      "B5-135.B.2\n",
+      "B5-135.B.5\n",
+      "B5-135.D.5\n",
+      "B5-137.5.B.5\n",
+      "B5-137.5.D.1\n",
+      "B5-137.5.D.5\n",
+      "B5-137.5.E.3\n",
       "Group 6 \n",
-      "2_5.E.1\n",
-      "2_6.E.1\n",
-      "2_7.E.1\n",
-      "2_8.E.1\n",
-      "Group 7 \n",
-      "2_7.B.2\n",
-      "2_7.E.3\n",
-      "2_8.B.1\n",
-      "2_8.B.2\n",
-      "Group 8 \n",
-      "1_1.D.1\n",
-      "1_1.D.2\n",
-      "1_1.D.3\n",
-      "Time cost 0.4472620487213135 s\n",
+      "B0-125.B.4\n",
+      "B0-125.D.4\n",
+      "B0-127.5.D.3\n",
+      "B0-127.5.D.4\n",
+      "B0-130.B.4\n",
+      "B0-130.D.4\n",
+      "B0-132.5.D.3\n",
+      "B0-132.5.D.4\n",
+      "B0-135.B.4\n",
+      "B0-135.D.4\n",
+      "B0-137.5.D.3\n",
+      "B0-137.5.D.4\n",
+      "Time cost 0.4857518672943115 s\n",
       "------------------------Done!------------------------\n"
      ]
     }
