--- a/application_code/spac/spac_cluster/spac_cluster.ipynb
+++ b/application_code/spac/spac_cluster/spac_cluster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# author: LijiongChen\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "import os\n",
@@ -53,25 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Start of the program :)\n",
       "-------------------------Ifo-------------------------\n",
-      "FolderPath: D:/ProjectMaterials/Chengdu_Line13/Part_07/DataProcess/20211124/SPAC/pair\n",
-      "FolderType: This folder has a total of [.target] file 33 \n",
+      "FolderPath: D:/ProjectMaterials/Chengdu_Line13/Part_01/DataProcess/20211119/SPAC/C\n",
+      "FolderType: This folder has a total of [.target] file 10 \n",
       "FolderType: This folder has a total of [.html] file 2 \n",
       "-------------------------Ifo-------------------------\n",
-      "The total number of rings is : 1\n"
+      "The total number of rings is : 2\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 1/33 [00:00<00:05,  5.78it/s]"
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -85,14 +86,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 33/33 [00:06<00:00,  5.48it/s]"
+      "100%|██████████| 10/10 [00:02<00:00,  3.70it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time cost 7.5713722705841064 s\n",
+      "Time cost 4.949743032455444 s\n",
       "-----------------------Loaded!-----------------------\n"
      ]
     },
@@ -105,6 +106,7 @@
     }
    ],
    "source": [
+    "print('Start of the program :)')\n",
     "# choose the path\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
@@ -180,17 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "------------------Cluster Parameter------------------\n",
-      "The min frequency is 10.0\n",
-      "The max frequency is 30.0\n",
-      "The cluster number is 8\n",
-      "time cost 9.055481195449829 s\n",
+      "The min frequency is 10.0Hz\n",
+      "The max frequency is 30.0Hz\n",
+      "The cluster number is 6\n",
+      "Time cost 8.975615978240967 s\n",
       "-----------------Parameter setted--------------------\n"
      ]
     }
@@ -271,15 +273,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "------------------Model Parameter--------------------\n",
-      "The initialized Vs0 is 1300m/s\n",
-      "time cost 3.2907090187072754 s\n",
+      "The initialized Vs0 is 2000m/s\n",
+      "Time cost 3.326561689376831 s\n",
       "-------------------Model Setted!---------------------\n"
      ]
     }
@@ -455,53 +457,28 @@
      "name": "#%% plot the reault with plotly\n"
     }
    },
-   "execution_count": 24,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Group 1 \n",
-      "2_1[D.4-D.3]\n",
-      "2_1[D.5-D.6]\n",
-      "2_3[D.3-D.4]\n",
+      "C25-0\n",
+      "C25-25\n",
       "Group 2 \n",
-      "2_3[D.3-D.1]\n",
-      "2_4[D.3-D.1]\n",
+      "C25-150\n",
+      "C50-150\n",
       "Group 3 \n",
-      "2_5[E.2-E.1]\n",
-      "2_7[E.1-E.2]\n",
+      "C50-0\n",
       "Group 4 \n",
-      "2_2[B.6-B.5]\n",
-      "2_4[B.5-B.4]\n",
-      "2_5[D.1-E.1]\n",
-      "2_5[D.2-E.2]\n",
-      "2_6[B.4-B.3]\n",
-      "2_6[D.1-E.1]\n",
-      "2_8[B.2-B.1]\n",
+      "C50-50\n",
+      "C50-75\n",
       "Group 5 \n",
-      "2_1[D.6-D.4]\n",
-      "2_3[D.4-D.2]\n",
+      "C50-25\n",
       "Group 6 \n",
-      "2_1[D.5-D.3]\n",
-      "2_2[D.5-D.3]\n",
-      "2_3[D.2-D.1]\n",
-      "2_5[D.1-D.2]\n",
-      "Group 7 \n",
-      "2_7[E.3-B.2]\n",
-      "D1D2\n",
-      "D2D3\n",
-      "D3D4\n",
-      "D4D5\n",
-      "D5D6\n",
-      "Group 8 \n",
-      "2_2[B.6-D.5]\n",
-      "2_2[D.3-B.5]\n",
-      "2_4[B.5-D.3]\n",
-      "2_4[D.1-B.4]\n",
-      "2_6[B.4-D.1]\n",
-      "2_6[E.1-B.3]\n",
-      "2_8[B.3-E.1]\n",
+      "C25-50\n",
+      "C25-75\n",
       "------------------------Done!------------------------\n"
      ]
     }
