update some tips

--- a/application_code/hv/hv_cluster/hv_cluster.ipynb
+++ b/application_code/hv/hv_cluster/hv_cluster.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "# author: LijiongChen\n",
+    "# author: Aries Chen\n",
     "# contact: s15010125@s.upc.edu.cn\n",
     "# time:19/06/2021\n",
     "# update:06/11/2021\n",
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "print('Start of the program :)')\n",
+    "print('Start of the program hv clusters :)')\n",
     "# Load HV\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
