--- a/application_code/spac/spac_cluster/spac_cluster.ipynb
+++ b/application_code/spac/spac_cluster/spac_cluster.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 13,
    "outputs": [],
    "source": [
-    "# author: LijiongChen\n",
+    "# author: Aries Chen\n",
     "# contact: s15010125@s.upc.edu.cn\n",
     "# time: 05/11/2021\n",
     "# update:06/11/2021\n",
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "print('Start of the program :)')\n",
+    "print('Start of the program spac clusters :)')\n",
     "# choose the path\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
