update some tips

--- a/application_code/hv/hv_cluster/hv_cluster.ipynb
+++ b/application_code/hv/hv_cluster/hv_cluster.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "print('Start of the program hv clusters :)')\n",
+    "print('Start of the program HVSR clusters :)')\n",
     "# Load HV\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
