--- a/application_code/spac/spac_cluster/spac_cluster.ipynb
+++ b/application_code/spac/spac_cluster/spac_cluster.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "print('Start of the program spac clusters :)')\n",
+    "print('Start of the program SPAC clusters :)')\n",
     "# choose the path\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
