update some tips

--- a/application_code/hv/hv_cluster/hv_cluster.ipynb
+++ b/application_code/hv/hv_cluster/hv_cluster.ipynb
@@ -2,28 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%% Ifo of the hv_cluster.ipynb code\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hv_cluster.ipynb\n",
+      "This code is designead to sort the HVSR using keans and plot the result with plotly.\n"
+     ]
+    }
+   ],
    "source": [
     "# author: Aries Chen\n",
     "# contact: s15010125@s.upc.edu.cn\n",
     "# time:19/06/2021\n",
     "# update:06/11/2021\n",
-    "# file: hv_cluster.ipynb\n",
-    "#       This code is designead to sort the HVSR using keans and plot the result with plotly."
+    "print('hv_cluster.ipynb\\nThis code is designead to sort the HVSR using keans and plot the result with plotly.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of the program HVSR clusters :)\n"
+     ]
+    }
+   ],
    "source": [
+    "print('Start of the program HVSR clusters :)')\n",
     "import os\n",
     "import tkinter as tk\n",
     "from tkinter import filedialog\n",
@@ -48,22 +65,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of the program :)\n",
-      "Folderpath: D:/ProjectMaterials/Chengdu_Line13/Part_01/DataProcess/20211125/B/HV\n",
-      "FolderType: This folder has a total of [.hv] file 72 \n"
+      "Folderpath: D:/ProjectMaterials/Chengdu_Line13/Part_06/DataProcess/20211127/HV/L06\n",
+      "FolderType: This folder has a total of [.html] file 1 \n",
+      "FolderType: This folder has a total of [.hv] file 28 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|▏         | 1/72 [00:00<00:08,  8.64it/s]"
+      "  4%|▎         | 1/28 [00:00<00:03,  8.30it/s]"
      ]
     },
     {
@@ -77,23 +94,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 72/72 [00:08<00:00,  8.35it/s]\n"
+      "100%|██████████| 28/28 [00:03<00:00,  9.10it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The min frequency is 5.0Hz\n",
-      "The max frequency is 20.0Hz\n",
-      "The cluster number is 6\n",
-      "Time cost 11.208673238754272 s\n",
+      "The min frequency is 3.0Hz\n",
+      "The max frequency is 7.0Hz\n",
+      "The cluster number is 1\n",
+      "Time cost 5.240747451782227 s\n",
       "------------------------Done!------------------------\n"
      ]
     }
    ],
    "source": [
-    "print('Start of the program HVSR clusters :)')\n",
     "# Load HV\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
@@ -170,91 +186,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Group 1 \n",
-      "B0-125.B.3\n",
-      "B0-125.E.2\n",
-      "B0-127.5.E.1\n",
-      "B0-127.5.E.2\n",
-      "B2.5-125.B.3\n",
-      "B2.5-125.E.2\n",
-      "B2.5-127.5.E.1\n",
-      "B2.5-127.5.E.2\n",
-      "Group 2 \n",
-      "B0-135.E.2\n",
-      "B0-137.5.E.2\n",
-      "B2.5-135.E.2\n",
-      "B2.5-137.5.E.2\n",
-      "Group 3 \n",
-      "B0-130.B.3\n",
-      "B0-130.E.2\n",
-      "B0-132.5.E.1\n",
-      "B0-132.5.E.2\n",
-      "B2.5-130.B.2\n",
-      "B2.5-130.B.3\n",
-      "B2.5-130.D.5\n",
-      "B2.5-130.E.2\n",
-      "B2.5-132.5.D.1\n",
-      "B2.5-132.5.D.5\n",
-      "B2.5-132.5.E.1\n",
-      "B2.5-132.5.E.2\n",
-      "B5-130.B.1\n",
-      "B5-130.B.2\n",
-      "B5-130.B.5\n",
-      "B5-130.D.5\n",
-      "B5-132.5.B.5\n",
-      "B5-132.5.D.1\n",
-      "B5-132.5.D.5\n",
-      "B5-132.5.E.3\n",
-      "Group 4 \n",
-      "B2.5-125.B.2\n",
-      "B2.5-125.D.5\n",
-      "B2.5-127.5.D.1\n",
-      "B2.5-127.5.D.5\n",
-      "B5-125.B.1\n",
-      "B5-125.B.2\n",
-      "B5-125.B.5\n",
-      "B5-125.D.5\n",
-      "B5-127.5.B.5\n",
-      "B5-127.5.D.1\n",
-      "B5-127.5.D.5\n",
-      "B5-127.5.E.3\n",
-      "Group 5 \n",
-      "B0-135.B.3\n",
-      "B0-137.5.E.1\n",
-      "B2.5-135.B.2\n",
-      "B2.5-135.B.3\n",
-      "B2.5-135.D.5\n",
-      "B2.5-137.5.D.1\n",
-      "B2.5-137.5.D.5\n",
-      "B2.5-137.5.E.1\n",
-      "B5-135.B.1\n",
-      "B5-135.B.2\n",
-      "B5-135.B.5\n",
-      "B5-135.D.5\n",
-      "B5-137.5.B.5\n",
-      "B5-137.5.D.1\n",
-      "B5-137.5.D.5\n",
-      "B5-137.5.E.3\n",
-      "Group 6 \n",
-      "B0-125.B.4\n",
-      "B0-125.D.4\n",
-      "B0-127.5.D.3\n",
-      "B0-127.5.D.4\n",
-      "B0-130.B.4\n",
-      "B0-130.D.4\n",
-      "B0-132.5.D.3\n",
-      "B0-132.5.D.4\n",
-      "B0-135.B.4\n",
-      "B0-135.D.4\n",
-      "B0-137.5.D.3\n",
-      "B0-137.5.D.4\n",
-      "Time cost 0.4857518672943115 s\n",
+      "L6-1.E.2\n",
+      "L6-1.E.3\n",
+      "L6-10.B.5\n",
+      "L6-10.B.6\n",
+      "L6-11.B.4\n",
+      "L6-11.B.5\n",
+      "L6-12.B.3\n",
+      "L6-12.B.4\n",
+      "L6-13.B.2\n",
+      "L6-13.B.3\n",
+      "L6-14.B.1\n",
+      "L6-14.B.2\n",
+      "L6-2.E.1\n",
+      "L6-2.E.2\n",
+      "L6-3.D.6\n",
+      "L6-3.E.1\n",
+      "L6-4.D.5\n",
+      "L6-4.D.6\n",
+      "L6-5.D.4\n",
+      "L6-5.D.5\n",
+      "L6-6.D.3\n",
+      "L6-6.D.4\n",
+      "L6-7.D.2\n",
+      "L6-7.D.3\n",
+      "L6-8.D.1\n",
+      "L6-8.D.2\n",
+      "L6-9.B.6\n",
+      "L6-9.D.1\n",
+      "Time cost 0.3524641990661621 s\n",
       "------------------------Done!------------------------\n"
      ]
     }
@@ -314,7 +281,7 @@
     "# update the plot frame\n",
     "fig.update_xaxes(type=\"log\")\n",
     "fig.update_xaxes(range=[0.3, 2])\n",
-    "fig.update_yaxes(range=[0.0, 7.0], tick0=0.0, dtick=1.0)\n",
+    "fig.update_yaxes(range=[0.0, 14.0], tick0=0.0, dtick=1.0)\n",
     "fig.update_xaxes(title_text=\"Frequency (Hz)\")\n",
     "fig.update_yaxes(title_text=\"Amplitude\")\n",
     "fig.update_layout(title='HV cluster', showlegend=False)\n",
