--- a/application_code/spac/spac_cluster/spac_cluster.ipynb
+++ b/application_code/spac/spac_cluster/spac_cluster.ipynb
@@ -2,15 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spac_cluster.ipynb\n",
+      "This code is designead to sort the SPAC using keans and plot the result with plotly.\n"
+     ]
+    }
+   ],
    "source": [
     "# author: Aries Chen\n",
     "# contact: s15010125@s.upc.edu.cn\n",
     "# time: 05/11/2021\n",
     "# update:06/11/2021\n",
-    "# file: spac_cluster.ipynb\n",
-    "#        This code is designead to sort the SPAC using keans and plot the result with plotly.\n"
+    "print('spac_cluster.ipynb\\nThis code is designead to sort the SPAC using keans and plot the result with plotly.')\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -21,9 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of the program SPAC clusters :)\n"
+     ]
+    }
+   ],
    "source": [
+    "print('Start of the program SPAC clusters :)')\n",
     "import os\n",
     "import tkinter as tk\n",
     "from tkinter import filedialog\n",
@@ -53,26 +70,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of the program :)\n",
       "-------------------------Ifo-------------------------\n",
-      "FolderPath: D:/ProjectMaterials/Chengdu_Line13/Part_01/DataProcess/20211119/SPAC/C\n",
-      "FolderType: This folder has a total of [.target] file 10 \n",
+      "FolderPath: D:/ProjectMaterials/Chengdu_Line13/Part_06/DataProcess/20211127/SPAC/L01\n",
       "FolderType: This folder has a total of [.html] file 2 \n",
+      "FolderType: This folder has a total of [.target] file 14 \n",
       "-------------------------Ifo-------------------------\n",
-      "The total number of rings is : 2\n"
+      "The total number of rings is : 1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/10 [00:00<?, ?it/s]"
+      "  7%|▋         | 1/14 [00:00<00:02,  5.30it/s]"
      ]
     },
     {
@@ -86,14 +102,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:02<00:00,  3.70it/s]"
+      "100%|██████████| 14/14 [00:02<00:00,  5.39it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time cost 4.949743032455444 s\n",
+      "Time cost 4.023154258728027 s\n",
       "-----------------------Loaded!-----------------------\n"
      ]
     },
@@ -106,7 +122,6 @@
     }
    ],
    "source": [
-    "print('Start of the program SPAC clusters :)')\n",
     "# choose the path\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
@@ -182,17 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "------------------Cluster Parameter------------------\n",
-      "The min frequency is 10.0Hz\n",
-      "The max frequency is 30.0Hz\n",
-      "The cluster number is 6\n",
-      "Time cost 8.975615978240967 s\n",
+      "The min frequency is 3.0Hz\n",
+      "The max frequency is 7.0Hz\n",
+      "The cluster number is 2\n",
+      "Time cost 4.794490575790405 s\n",
       "-----------------Parameter setted--------------------\n"
      ]
     }
@@ -273,15 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "------------------Model Parameter--------------------\n",
-      "The initialized Vs0 is 2000m/s\n",
-      "Time cost 3.326561689376831 s\n",
+      "The initialized Vs0 is 1500m/s\n",
+      "Time cost 2.907881736755371 s\n",
       "-------------------Model Setted!---------------------\n"
      ]
     }
@@ -457,28 +472,28 @@
      "name": "#%% plot the reault with plotly\n"
     }
    },
-   "execution_count": 18,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Group 1 \n",
-      "C25-0\n",
-      "C25-25\n",
+      "L1-13\n",
+      "L1-14\n",
       "Group 2 \n",
-      "C25-150\n",
-      "C50-150\n",
-      "Group 3 \n",
-      "C50-0\n",
-      "Group 4 \n",
-      "C50-50\n",
-      "C50-75\n",
-      "Group 5 \n",
-      "C50-25\n",
-      "Group 6 \n",
-      "C25-50\n",
-      "C25-75\n",
+      "L1-1\n",
+      "L1-10\n",
+      "L1-11\n",
+      "L1-12\n",
+      "L1-2\n",
+      "L1-3\n",
+      "L1-4\n",
+      "L1-5\n",
+      "L1-6\n",
+      "L1-7\n",
+      "L1-8\n",
+      "L1-9\n",
       "------------------------Done!------------------------\n"
      ]
     }
